testdata/baselines/reference/submodule/conformance/nodeModulesResolveJsonModule(module=nodenext).errors.txt
index.cts(1,17): error TS2307: Cannot find module './package.json' or its corresponding type declarations.
index.cts(3,21): error TS2307: Cannot find module './package.json' or its corresponding type declarations.
index.mts(1,17): error TS2307: Cannot find module './package.json' or its corresponding type declarations.
index.mts(1,34): error TS2856: Import attributes are not allowed on statements that compile to CommonJS 'require' calls.
index.mts(3,21): error TS2307: Cannot find module './package.json' or its corresponding type declarations.
index.mts(3,38): error TS2856: Import attributes are not allowed on statements that compile to CommonJS 'require' calls.
index.ts(1,17): error TS2307: Cannot find module './package.json' or its corresponding type declarations.
index.ts(1,34): error TS2856: Import attributes are not allowed on statements that compile to CommonJS 'require' calls.
index.ts(3,21): error TS2307: Cannot find module './package.json' or its corresponding type declarations.
index.ts(3,38): error TS2856: Import attributes are not allowed on statements that compile to CommonJS 'require' calls.


==== index.ts (4 errors) ====
    import pkg from "./package.json" with { type: "json" };
                    ~~~~~~~~~~~~~~~~
!!! error TS2307: Cannot find module './package.json' or its corresponding type declarations.
                                     ~~~~~~~~~~~~~~~~~~~~~
!!! error TS2856: Import attributes are not allowed on statements that compile to CommonJS 'require' calls.
    export const name = pkg.name;
    import * as ns from "./package.json" with { type: "json" };
                        ~~~~~~~~~~~~~~~~
!!! error TS2307: Cannot find module './package.json' or its corresponding type declarations.
                                         ~~~~~~~~~~~~~~~~~~~~~
!!! error TS2856: Import attributes are not allowed on statements that compile to CommonJS 'require' calls.
    export const thing = ns;
    export const name2 = ns.default.name;
==== index.cts (2 errors) ====
    import pkg from "./package.json";
                    ~~~~~~~~~~~~~~~~
!!! error TS2307: Cannot find module './package.json' or its corresponding type declarations.
    export const name = pkg.name;
    import * as ns from "./package.json";
                        ~~~~~~~~~~~~~~~~
!!! error TS2307: Cannot find module './package.json' or its corresponding type declarations.
    export const thing = ns;
    export const name2 = ns.default.name;
==== index.mts (4 errors) ====
    import pkg from "./package.json" with { type: "json" };
                    ~~~~~~~~~~~~~~~~
!!! error TS2307: Cannot find module './package.json' or its corresponding type declarations.
                                     ~~~~~~~~~~~~~~~~~~~~~
!!! error TS2856: Import attributes are not allowed on statements that compile to CommonJS 'require' calls.
    export const name = pkg.name;
    import * as ns from "./package.json" with { type: "json" };
                        ~~~~~~~~~~~~~~~~
!!! error TS2307: Cannot find module './package.json' or its corresponding type declarations.
                                         ~~~~~~~~~~~~~~~~~~~~~
!!! error TS2856: Import attributes are not allowed on statements that compile to CommonJS 'require' calls.
    export const thing = ns;
    export const name2 = ns.default.name;
==== package.json (0 errors) ====
    {
        "name": "pkg",
        "version": "0.0.1",
        "type": "module",
        "default": "misedirection"
    }